Fixed naming issue with template.

--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -1,4 +1,4 @@
-{{define "homepage"}}<div class="image-header">
+{{define "index"}}<div class="image-header">
 <img class="logo" src="/img/orion_md.png"><img class="title" src="/img/orion_title.png">
 </div>
 {{end}}
